--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="myusarisoy.quizapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -14,20 +15,25 @@
         <activity
             android:name=".Opening"
             android:label="@string/app_name"
-            android:configChanges="orientation">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UsernameActivity" />
-        <activity android:name=".Categories" />
-        <activity android:name=".Quiz" />
-        <activity android:name=".QuizFragment" />
-        <activity android:name=".Score" />
-        <activity android:name=".Result" />
-        <activity android:name=".Scoreboard"/>
+        <activity android:name=".UsernameActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Categories"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Quiz"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".QuizFragment"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Score"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Scoreboard"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
